--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mursitaffandi.mursitaffandi_baking">
-<uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".ApplicationBase"
         android:allowBackup="true"
@@ -13,10 +15,20 @@
         <activity android:name=".WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".List_food"></activity>
+        <activity android:name=".List_food" />
+        <activity
+            android:name=".DetailFoodActivity"
+            android:label="@string/title_activity_detail_food"
+            android:parentActivityName=".List_food"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.mursitaffandi.mursitaffandi_baking.List_food" />
+        </activity>
     </application>
 
 </manifest>
