--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,22 +12,31 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".WelcomeActivity">
+        <activity android:name=".activity.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".List_food" />
+        <activity android:name=".activity.List_food" />
         <activity
-            android:name=".DetailFoodActivity"
-            android:label="@string/title_activity_detail_food"
-            android:parentActivityName=".List_food"
+            android:name=".activity.DetailFoodListActivity"
+            android:label="@string/title_detailfood_list"
+            android:parentActivityName=".activity.List_food"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.mursitaffandi.mursitaffandi_baking.List_food" />
+                android:value="com.mursitaffandi.mursitaffandi_baking.activity.List_food" />
+        </activity>
+        <activity
+            android:name=".activity.DetailFoodDetailActivity"
+            android:label="@string/title_detailfood_detail"
+            android:parentActivityName=".activity.DetailFoodListActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.mursitaffandi.mursitaffandi_baking.activity.DetailFoodListActivity" />
         </activity>
     </application>
 
